fix: add resolver to routes to load data

--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
       <div class="f-c-c-c">
         <a
           id="profileButton"
-          [routerLink]="['/services/profile', workerId]"
+          [routerLink]="['/services/profiles', workerId]"
           class="cool-left-button services-button f-r-sb-c"
           [ngClass]="{ active: channelClass === 'Profile' }"
         >
