--- a/frontend/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
+++ b/frontend/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
@@ -13,7 +13,9 @@
         <div class="post-section">
           <div class="post-info">
             <div class="f-c-s-s g-05">
-              <span class="font-size-24 mb-3 c-text">{{ event?.name }}</span>
+              <span class="font-size-24 mb-3 c-text bold">{{
+                event?.name
+              }}</span>
               <p style="font-size: 14px; font-weight: normal">
                 {{ event?.description }}
               </p>
@@ -22,20 +24,34 @@
               <section class="f-c-c-s">
                 <div class="info-item">
                   <i class="fa fa-calendar me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.DATE" | translate }}</span>
-                  <span class="info-value">{{ event?.eventDate }}</span>
+                  <span class="info-label me-2">{{
+                    'CALENDAR-EVENT-PAGE.DATE' | translate
+                  }}</span>
+                  <span class="info-value">{{ event?.eventDateDisplay }}</span>
                 </div>
                 <div class="info-item">
-                  <i class="fa fa-clock-o me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.TIME" | translate }}</span>
-                  <span class="info-value"
-                    >{{ "CALENDAR-EVENT-PAGE.FROM__EVENTSTARTTIME__TO__EVENTENDTIME_" | translate: {startTime: event?.startTime, endTime: event?.endTime} }}</span
-                  >
+                  <i class="fa fa-clock me-2" aria-hidden="true"></i>
+                  <span class="info-label me-2">{{
+                    'CALENDAR-EVENT-PAGE.TIME' | translate
+                  }}</span>
+                  <span class="info-value">{{
+                    'CALENDAR-EVENT-PAGE.FROM__EVENTSTARTTIME__TO__EVENTENDTIME_'
+                      | translate
+                        : {
+                            startTime: event?.startTime,
+                            endTime: event?.endTime
+                          }
+                  }}</span>
                 </div>
                 <div class="info-item">
                   <i class="fa fa-hourglass-half me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.DURATION" | translate }}</span>
-                  <span class="info-value">{{ "CALENDAR-EVENT-PAGE._EVENTDURATION__MINUTES" | translate: {duration: event?.duration} }}</span>
+                  <span class="info-label me-2">{{
+                    'CALENDAR-EVENT-PAGE.DURATION' | translate
+                  }}</span>
+                  <span class="info-value">{{
+                    'CALENDAR-EVENT-PAGE._EVENTDURATION__MINUTES'
+                      | translate : { duration: event?.duration }
+                  }}</span>
                 </div>
               </section>
             </div>
@@ -51,7 +67,7 @@
               class="accept-button outlined"
               style="margin-top: 5px; font-size: 12px"
             >
-            {{ "CALENDAR-EVENT-PAGE.ATTEND" | translate }}
+              {{ 'CALENDAR-EVENT-PAGE.ATTEND' | translate }}
             </button>
             <button
               *ngIf="willAttend"
@@ -59,7 +75,7 @@
               class="ignore-button outlined"
               style="margin-top: 5px; font-size: 12px"
             >
-            {{ "CALENDAR-EVENT-PAGE.UNATTEND" | translate }}
+              {{ 'CALENDAR-EVENT-PAGE.UNATTEND' | translate }}
             </button>
           </div>
         </div>
@@ -67,7 +83,10 @@
         <!-- Attendees Section -->
         <div class="post-info">
           <h3 class="" style="color: var(--text)">
-            {{ "CALENDAR-EVENT-PAGE.ATTENDEES__EVENTATTENDEESCOUNT_" | translate: {attendeesCount: event?.attendeesCount} }}
+            {{
+              'CALENDAR-EVENT-PAGE.ATTENDEES__EVENTATTENDEESCOUNT_'
+                | translate : { attendeesCount: event?.attendeesCount }
+            }}
           </h3>
           <div class="divider"></div>
 
@@ -77,7 +96,12 @@
             class="postcard-description"
             style="color: var(--lighttext)"
           >
-            <p>{{ "CALENDAR-EVENT-PAGE.NO_ATTENDEES_HAVE_REGISTERED_FOR_THIS_EVENT_YET" | translate }}</p>
+            <p>
+              {{
+                'CALENDAR-EVENT-PAGE.NO_ATTENDEES_HAVE_REGISTERED_FOR_THIS_EVENT_YET'
+                  | translate
+              }}
+            </p>
           </div>
 
           <!-- Attendees List -->
