--- a/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
@@ -1,5 +1,5 @@
 <div class="service-widget">
-  <div [routerLink]="['/services', 'profile', worker?.self]">
+  <div [routerLink]="['/services', 'profiles', worker?.self]">
     <div class="card-text">
       <!-- Avatar image -->
       <div class="img-avatar">
