fix: deployment issues, start simplification of validation

--- a/frontend/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
@@ -11,7 +11,7 @@
               [src]="[
                 post.author?.image
                   ? post.author?.image
-                  : '/assets/images/default-profile.png'
+                  : environment.deployUrl + 'assets/images/default-profile.png'
               ]"
               class="small-profile-picture"
               alt="profile_picture_img"
