--- a/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -27,7 +27,7 @@
                 <img
                   id="output"
                   [src]="
-                    profileImageSafeUrl || 'assets/images/default-profile.png'
+                    profileImageSafeUrl || environment.deployUrl + 'assets/images/default-profile.png'
                   "
                   alt="profile_picture_img"
                 />
