--- a/frontend/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
+++ b/frontend/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
@@ -22,7 +22,7 @@
         <div>
           <img
             [src]="
-              user.image ? user.image : '/assets/images/default-profile.png'
+              user.image ? user.image : environment.deployUrl + 'assets/images/default-profile.png'
             "
             class="big-profile-picture"
             style="width: 50px; height: 50px"
