--- a/frontend/src/app/features/admin/admin-service-providers-requests-page/admin-service-providers-requests-page.component.html
+++ b/frontend/src/app/features/admin/admin-service-providers-requests-page/admin-service-providers-requests-page.component.html
@@ -23,7 +23,7 @@
             [src]="
               worker.user.image
                 ? worker.user.image
-                : '/assets/images/default-profile.png'
+                : environment.deployUrl + 'assets/images/default-profile.png'
             "
             style="width: 50px; height: 50px"
             [alt]="'user_picture_img_' + worker.user.self"
